# ROV

src/ROV-Ricketts-ros2/: README.md
src/ROV-Ricketts-ros2/rov_ricketts_description/config/: my_controllers.yaml
src/ROV-Ricketts-ros2/rov_ricketts_description/meshes/: equipment.dae
src/ROV-Ricketts-ros2/rov_ricketts_description/urdf/: Ricketts.urdf.xacro  arm.xacro  base.xacro  base_separated.xacro  camera.xacro  depth_camera.xacro  materials.xacro  new_arm.xacro  ros2_control.xacro  temp.urdf
src/ROV-Ricketts-ros2/rov_ricketts_gui/rov_ricketts_gui/: rov_ricketts_gui.py
src/ROV-Ricketts-ros2/rov_ricketts_sim/: CMakeLists.txt
src/ROV-Ricketts-ros2/rov_ricketts_sim/config/: gz_bridge.yaml  joystick.yaml
src/ROV-Ricketts-ros2/rov_ricketts_sim/launch/: joystick.launch.py  rov_sim.launch.py  rsp.launch.py
src/ROV-Ricketts-ros2/rov_ricketts_sim/models/shark/: model.config  model.sdf
src/ROV-Ricketts-ros2/rov_ricketts_sim/scripts/: thruster_teleop_node.py
src/ROV-Ricketts-ros2/rov_ricketts_sim/worlds/: ocean.sdf  underwater_world.sdf
